--- a/src/main/resources/report_regimen.jrxml
+++ b/src/main/resources/report_regimen.jrxml
@@ -143,7 +143,7 @@ UFV Final:]]></text>
 		</band>
 	</pageHeader>
 	<detail>
-		<band height="328" splitType="Stretch">
+		<band height="282" splitType="Stretch">
 			<componentElement>
 				<reportElement x="1" y="10" width="750" height="250" uuid="d9fed7f7-6d11-4d74-8bef-504a831c3b0d">
 					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
@@ -196,7 +196,7 @@ UFV Final:]]></text>
 						<jr:detailCell style="Table_TD" height="30">
 							<textField>
 								<reportElement x="0" y="0" width="210" height="30" uuid="7df44dab-cb0f-4a29-a8b0-5f441928670b"/>
-								<textElement textAlignment="Center" verticalAlignment="Middle">
+								<textElement textAlignment="Left" verticalAlignment="Middle">
 									<font size="8"/>
 								</textElement>
 								<textFieldExpression><![CDATA[$F{descripcion}]]></textFieldExpression>
@@ -569,6 +569,87 @@ UFV Final:]]></text>
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="45" splitType="Stretch"/>
+		<band height="106" splitType="Stretch">
+			<staticText>
+				<reportElement x="333" y="82" width="86" height="9" uuid="1de3e814-5704-4748-9134-126a907d68a7"/>
+				<textElement textAlignment="Center">
+					<font size="5"/>
+				</textElement>
+				<text><![CDATA[GERENTE GENERAL]]></text>
+			</staticText>
+			<line>
+				<reportElement x="297" y="80" width="159" height="1" uuid="9f565a8d-59ca-40d1-8e61-fb6eacd38360">
+					<property name="com.jaspersoft.studio.unit.y" value="px"/>
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
+				<graphicElement>
+					<pen lineStyle="Dashed"/>
+				</graphicElement>
+			</line>
+			<staticText>
+				<reportElement x="39" y="30" width="90" height="10" uuid="660227f7-957f-40a5-8510-9af822f25386"/>
+				<textElement textAlignment="Center">
+					<font size="5"/>
+				</textElement>
+				<text><![CDATA[ENCARGADO DE ACTIVOS FIJOS]]></text>
+			</staticText>
+			<line>
+				<reportElement x="44" y="27" width="86" height="1" uuid="41b8ef6f-d49c-4858-b444-3b4d23d96b2e">
+					<property name="com.jaspersoft.studio.unit.y" value="px"/>
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
+				<graphicElement>
+					<pen lineStyle="Dashed"/>
+				</graphicElement>
+			</line>
+			<staticText>
+				<reportElement x="210" y="30" width="90" height="18" uuid="a1e7ef6b-a7d9-4d3b-a736-86696726067c"/>
+				<textElement textAlignment="Center">
+					<font size="5"/>
+				</textElement>
+				<text><![CDATA[JEFE DE LA UNIDAD DE MANEJO Y DISPOSICION DE BIENES]]></text>
+			</staticText>
+			<line>
+				<reportElement x="208" y="26" width="97" height="1" uuid="8de67da7-d5b0-43c0-9277-7bb977c80482">
+					<property name="com.jaspersoft.studio.unit.y" value="px"/>
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
+				<graphicElement>
+					<pen lineStyle="Dashed"/>
+				</graphicElement>
+			</line>
+			<staticText>
+				<reportElement x="410" y="30" width="110" height="10" uuid="66b01e42-759e-4b76-9b90-cb3041179271"/>
+				<textElement textAlignment="Center">
+					<font size="5"/>
+				</textElement>
+				<text><![CDATA[JEFE DEPARTAMENTO ADMINISTRATIVO]]></text>
+			</staticText>
+			<line>
+				<reportElement x="411" y="27" width="110" height="1" uuid="d4700993-c21f-4e2a-9e53-edb6e187f5da">
+					<property name="com.jaspersoft.studio.unit.y" value="px"/>
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
+				<graphicElement>
+					<pen lineStyle="Dashed"/>
+				</graphicElement>
+			</line>
+			<staticText>
+				<reportElement x="630" y="30" width="70" height="10" uuid="c1ab9047-7b81-4451-aecb-cff92e76b085"/>
+				<textElement textAlignment="Center">
+					<font size="5"/>
+				</textElement>
+				<text><![CDATA[GERENTE DE FINANZAS]]></text>
+			</staticText>
+			<line>
+				<reportElement x="627" y="27" width="73" height="1" uuid="271fb5c4-4eaa-43a5-9cc8-4df02bae9146">
+					<property name="com.jaspersoft.studio.unit.y" value="px"/>
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
+				<graphicElement>
+					<pen lineStyle="Dashed"/>
+				</graphicElement>
+			</line>
+		</band>
 	</columnFooter>
 </jasperReport>
